--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,9 @@ html {
   --primary-700: #6d28d9;
   --primary-800: #5b21b6;
   --primary-900: #4c1d95;
+  --primary-1000: #1f18e2;
+  --primary-1100: #c1d4e6;
+  --primary-1200: #e9efff;
 
   /* grey */
   --grey-50: #f8fafc;
@@ -62,10 +65,12 @@ html {
     0 4px 6px -2px rgba(0, 0, 0, 0.05);
   --shadow-4: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
     0 10px 10px -5px rgba(0, 0, 0, 0.04);
+  --shadow-5: 0 25px 30px -10px rgba(0, 0, 0, 0.1),
+    0 20px 20px -5px rgba(0, 0, 0, 0.1);
 }
 
 body {
-  background: var(--backgroundColor);
+  background: var(--primary-1200);
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 400;
@@ -278,13 +283,13 @@ ul {
   border-radius: 50%;
   margin-bottom: 1rem;
   object-fit: cover;
-  border: 4px solid var(--primary-200);
-  box-shadow: var(--shadow-3);
+  border: 4px solid var(--primary-1200);
+  box-shadow: var(--shadow-5);
 }
 
 .name {
   text-transform: uppercase;
-  color: var(--primary-500);
+  color: var(--primary-1000);
   margin-bottom: 0.75rem;
 }
 .title {
@@ -302,7 +307,7 @@ ul {
 .icon {
   font-size: 3rem;
   margin-top: 1rem;
-  color: var(--primary-500);
+  color: var(--primary-1000);
 }
 .prev,
 .next {
@@ -358,8 +363,8 @@ ul {
 }
 
 .slick-prev::before {
-  color: var(--primary-500) !important;
+  color: var(--primary-1000) !important;
 }
 .slick-next::before {
-  color: var(--primary-500) !important;
+  color: var(--primary-1000) !important;
 }
